tests/compile_fail/ktstr_test_workloads_not_array.stderr
error: expected array of Payload paths for workloads (e.g. [FIO, STRESS_NG])
  --> tests/compile_fail/ktstr_test_workloads_not_array.rs:16:26
   |
16 | #[ktstr_test(workloads = FIO)]
   |                          ^^^
